@@ -3,6 +3,7 @@ package brooklyn.entity.java;
 import static org.testng.Assert.fail;
 
 import java.io.File;
+import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -32,6 +33,7 @@ import brooklyn.util.collections.MutableMap;
 import brooklyn.util.collections.MutableSet;
 import brooklyn.util.internal.ssh.SshTool;
 import brooklyn.util.jmx.jmxmp.JmxmpAgent;
+import brooklyn.util.os.Os;
 import brooklyn.util.text.Strings;
 
 import com.google.common.collect.ImmutableList;
@@ -142,7 +144,7 @@ public class JavaOptsTest {
         
         String runDir = javaProcess.getRunDir();
         Map<String,String> expectedEnvs = ImmutableMap.<String,String>of();
-        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS -cp \"lib/*\" my.Main  >> %s/console 2>&1 </dev/null &", runDir));
+        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS my.Main  >> %s/console 2>&1 </dev/null &", runDir));
         
         assertHasExpectedCmds(expectedCmds, expectedEnvs);
     }
@@ -155,7 +157,7 @@ public class JavaOptsTest {
         
         String runDir = javaProcess.getRunDir();
         Map<String,String> expectedEnvs = ImmutableMap.<String,String>of();
-        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS -cp \"lib/*\" my.Main \"a1\" \"a2\" >> %s/console 2>&1 </dev/null &", runDir));
+        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS my.Main \"a1\" \"a2\" >> %s/console 2>&1 </dev/null &", runDir));
         
         assertHasExpectedCmds(expectedCmds, expectedEnvs);
     }
@@ -170,7 +172,7 @@ public class JavaOptsTest {
         String defaultJavaOpts = "-Xms128m -Xmx512m -XX:MaxPermSize=512m";
         String expectedJavaOpts = defaultJavaOpts+" -abc";
         Map<String,String> expectedEnvs = ImmutableMap.<String,String>of("JAVA_OPTS", expectedJavaOpts);
-        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS -cp \"lib/*\" my.Main  >> %s/console 2>&1 </dev/null &", runDir));
+        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS my.Main  >> %s/console 2>&1 </dev/null &", runDir));
         
         assertHasExpectedCmds(expectedCmds, expectedEnvs);
     }
@@ -186,7 +188,7 @@ public class JavaOptsTest {
         String defaultJavaOpts = "-Xms128m -Xmx512m -XX:MaxPermSize=512m";
         String expectedJavaOpts = defaultJavaOpts+" -Dmykey=myval";
         Map<String,String> expectedEnvs = ImmutableMap.<String,String>of("JAVA_OPTS", expectedJavaOpts);
-        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS -cp \"lib/*\" my.Main  >> %s/console 2>&1 </dev/null &", runDir));
+        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS my.Main  >> %s/console 2>&1 </dev/null &", runDir));
         
         assertHasExpectedCmds(expectedCmds, expectedEnvs);
     }
@@ -198,11 +200,10 @@ public class JavaOptsTest {
         app.start(ImmutableList.of(loc));
         
         String runDir = javaProcess.getRunDir();
-//        String expectedJavaOpts = "-Xms128m -Xmx567m -XX:MaxPermSize=567m";
         Object expectedJavaOpts = MutableSet.of("-Xms128m", "-Xmx567m", "-XX:MaxPermSize=567m");
         Map<String,Object> expectedEnvs = ImmutableMap.<String,Object>of("JAVA_OPTS", expectedJavaOpts);
-        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS -cp \"lib/*\" my.Main  >> %s/console 2>&1 </dev/null &", runDir));
-        
+        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS my.Main  >> %s/console 2>&1 </dev/null &", runDir));
+
         assertHasExpectedCmds(expectedCmds, expectedEnvs);
     }
     
@@ -229,7 +230,7 @@ public class JavaOptsTest {
         String defaultJavaOpts = "-Xms128m -Xmx512m -XX:MaxPermSize=512m";
         String expectedJavaOpts = defaultJavaOpts+" -client";
         Map<String,String> expectedEnvs = ImmutableMap.<String,String>of("JAVA_OPTS", expectedJavaOpts);
-        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS -cp \"lib/*\" my.Main  >> %s/console 2>&1 </dev/null &", runDir));
+        List<String> expectedCmds = ImmutableList.of(String.format("java $JAVA_OPTS my.Main  >> %s/console 2>&1 </dev/null &", runDir));
         
         assertHasExpectedCmds(expectedCmds, expectedEnvs);
     }
